fix overflow bug

--- a/src/movies/components/movie/_movie.scss
+++ b/src/movies/components/movie/_movie.scss
@@ -1,6 +1,7 @@
 .movie {
 	position: relative;
-	height: 100%;
+	height: 80%;
+	width: 100%;
 	&__front, &__back {
 		height: 100%;
 		position: absolute;
